<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>Minimal Nav2 bringup for the wheel robot.</description>
  <maintainer email="user@todo.todo">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>cartographer_config</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>dwb_core</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
