<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_command_bridge</name>
  <version>0.0.0</version>
  <description>Voice command JSON bridge for robot control</description>
  <maintainer email="edmounds@163.com">cqc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rcl_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>navigation</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>boost</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
